--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4",
     "morgan": "~1.9.1",
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "pug": "2.0.0-beta11"
   }
 }
