--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^7.3.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.0.1",
     "path": "^0.12.7"
   }
