--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-DB_MONGODB = DB_MONGODB
+DB_MONGODB = mongodb+srv://asctoolkits:dqV1uNJXuI17MYyq@ascbetest.pugbkl5.mongodb.net/?retryWrites=true&w=majority
+PORT = 3003
