--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "ngrok": "^5.0.0-beta.2",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "redis": "^4.6.8"
   }
 }
